src/objects/Risque_Entite__c.object
<CustomObject>
    <fields>
        <fullName>Date_Detection__c</fullName>
        <label>Date of detection</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Structure</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risques_Entites</relationshipLabel>
        <relationshipName>Risques_Entites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risque__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Risk</label>
        <referenceTo>Risque__c</referenceTo>
        <relationshipLabel>Risques_Entites</relationshipLabel>
        <relationshipName>Risques_Entites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>criticite__c</fullName>
        <formula>( frequence__c  +  gravite__c ) *  maitrise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criticality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>etat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>frequence__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gravite__c</fullName>
        <label>Gravity</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maitrise__c</fullName>
        <label>Mastery</label>
        <precision>17</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>responsable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Risques_Entites</relationshipLabel>
        <relationshipName>Risques_Entites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Detected Risk</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risques detectés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cotation_fields_must_not_be_ampty</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( frequence__c )  ||  ISNULL( gravite__c )  ||  ISNULL( maitrise__c )</errorConditionFormula>
        <errorMessage>The cotation fields like frequency, gravity and mastery are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>manager_same_structure_as_risk</fullName>
        <active>true</active>
        <errorConditionFormula>responsable__r.Account.Id   &lt;&gt;   Entite__r.Id</errorConditionFormula>
        <errorDisplayField>responsable__c</errorDisplayField>
        <errorMessage>The detected risk and it&apos;s manager should be in the same structure</errorMessage>
    </validationRules>
</CustomObject>